# lustre-hsm-phobos

./: .gitignore  Makefile  NOTEBOOK.txt  README.md  acceptance.sh  config.h.in  configure.ac  lhsmtool_phobos.c  lhsmtool_phobos.conf  lhsmtool_phobos.service  lhsmtool_phobos.spec.in  lhsmtool_posix.c  meson.build  project.config
src/: .gitignore  Makefile  Makefile.in  common.h  config.h  config.h.in  hints.c  layout.c  layout.h  log.c  phobos.c
systemd/: lhsmtool_phobos.conf  lhsmtool_phobos.service  lhsmtool_phobos.sysconfig  lhsmtool_phobos@.service
tests/: hsm_import.c  lhsmtool_phobos.service  lhsmtool_phobos.sysconfig  lhsmtool_phobos@.service  unit.c  valgrind.supp
utils/: add_specfile_to_dist.sh  make_rpm.sh
